<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/img_auth_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintHeight_percent=".2"/>

    <TextView
        android:id="@+id/text_auth_title"
        style="@style/TextAppearance.Screen.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/auth_code_input_code"
        android:layout_marginBottom="@dimen/content_margin_small"
        app:layout_constraintBottom_toTopOf="@id/input_number"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/barrier_logo"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias=".2"/>

    <com.santalu.maskara.widget.MaskEditText
        style="@style/TextAppearance.Screen.Title"
        android:id="@+id/input_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_margin_small"
        android:gravity="center"
        android:hint="@string/auth_code_input_hint"
        android:inputType="number"
        app:mask="@string/auth_code_input_mask"
        tools:ignore="SpUsage"
        android:imeOptions="actionDone"
        android:background="@drawable/bg_input_phone_corners"
        app:layout_constraintBottom_toTopOf="@id/retry_timer"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_auth_title" />

    <TextView
        android:id="@+id/retry_timer"
        style="@style/TextAppearance.Screen.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/auth_code_retry_timer"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/input_number"/>
    
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/retry_timer"
        app:layout_constraintBottom_toTopOf="@id/btn_retry"
        android:visibility="gone"
        tools:visibility="visible"/>

    <View
        android:id="@+id/bottom_bar"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_retry"
        style="@style/AppTheme.Button.Colored.Lite"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginBottom="@dimen/content_margin_small"
        android:text="@string/auth_code_btn_retry"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:enabled="false"
        tools:enabled="true"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/retry_timer"
        app:layout_constraintVertical_bias="1.0"/>

    <Button
        android:id="@+id/btn_next"
        style="@style/AppTheme.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:text="@string/auth_code_btn_next"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:enabled="false"
        tools:enabled="true"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/content_margin_small" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/content_margin_small" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="img_auth_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>