<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/content_margin_small">

    <include
        android:id="@+id/layout_header"
        layout="@layout/layout_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_dimensions_down"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_action_height"
        android:layout_marginTop="@dimen/content_margin_small"
        android:gravity="left|center"
        android:layoutDirection="rtl"
        android:paddingStart="10dp"
        android:text="@string/dimensions_down"
        app:icon="@drawable/ic_arrow_right"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_header"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/btn_supports"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_action_height"
        android:layout_marginTop="@dimen/content_margin_small"
        android:gravity="left|center"
        android:layoutDirection="rtl"
        android:paddingStart="10dp"
        android:text="@string/supports"
        app:icon="@drawable/ic_arrow_right"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dimensions_down"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_margin_small"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>