<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp">

    <TextView
        android:id="@+id/number_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/textDir"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/type_measurement_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/type_measurement_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        app:layout_constraintBottom_toTopOf="@+id/textDir"
        app:layout_constraintLeft_toRightOf="@+id/number_measure"
        app:layout_constraintRight_toLeftOf="@+id/height"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textDir"
        app:layout_constraintLeft_toRightOf="@+id/type_measurement_text"
        app:layout_constraintRight_toLeftOf="@+id/result_measurement_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_measurement_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/width"
        app:layout_constraintBottom_toTopOf="@+id/textDir"
        app:layout_constraintLeft_toRightOf="@+id/height"
        app:layout_constraintRight_toLeftOf="@+id/length"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textDir"
        app:layout_constraintLeft_toRightOf="@+id/result_measurement_text"
        app:layout_constraintRight_toLeftOf="@+id/info"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@color/white"
        android:contentDescription="icon_info_measurement"
        android:src="@drawable/ic_info_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/length"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_side"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/type_measurement_text"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <TextView
        android:id="@+id/direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textDir"
        app:layout_constraintTop_toBottomOf="@+id/height" />

</androidx.constraintlayout.widget.ConstraintLayout>